fixed formatting, only works on safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,18 +30,27 @@ button {
     opacity: .5;
 }
 
+button:hover{
+    cursor:pointer;
+}
+
 .currentTempStyles {
     border: 3px solid #ffffff;
-    width: 20%;
+    width: 40%;
     margin: 10% auto;
+}
+
+.currentTempStyles p {
+    font-size: 32px;
 }
 
 .hourlyTempStyles {
     border: 3px solid #ffffff;
     display: inline-block;
-    width: 12%;
+    width: 20%;
+
     margin: 5% 2%;
-    padding: 3%;
+    /*padding: 3%;*/
 }
 
 .dailyTempStyles {
@@ -50,5 +59,3 @@ button {
     width: 20%;
     margin: 5% 2%;
 }
-
-
